@@ -1,3 +1,8 @@
+2024-06-25 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c:
+	  Improve 16-bit signed right shift code generation.
+
 2024-06-24 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/gen.c,
